docs(readme): add readme with all the setup requirements